add jcanvas to draw asteroids

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<script src="keymaster.min.js"></script>
+  <script src="jquery-2.0.3.min.js"></script>
+  <script src="jcanvas.min.js"></script>
 </head>
 <body>
 	<canvas width="500" height="500" id="game"></canvas>
