add asteroid repopulation

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 	<script src="keymaster.min.js"></script>
   <script src="jquery-2.0.3.min.js"></script>
   <script src="jcanvas.min.js"></script>
+  <script src="underscore-min.js"></script>
 </head>
 <body>
-	<canvas width="500" height="500" id="game"></canvas>
+	<canvas width="1000" height="500" id="game"></canvas>
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
