add image preload

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <script src="jquery-2.0.3.min.js"></script>
   <script src="jcanvas.min.js"></script>
   <script src="underscore-min.js"></script>
+  <script src="PxLoader.js"></script>
+  <script type="text/javascript" src="PxLoaderImage.js"></script>
 </head>
 <body>
 	<canvas width="1000" height="500" id="game"></canvas>
